--- a/biochem.html
+++ b/biochem.html
@@ -3,10 +3,10 @@
     <head>
 		<title>Biochemistry</title>
 		<meta charset="UTF-8">
-		<link rel="icon" href="images/favicon.png">
-		<link rel="stylesheet" href="../bar.css" type="text/css">
-		<link rel="stylesheet" href="../branches.css" type="text/css">
-		<link rel="stylesheet" href="../footer.css" type="text/css">
+		<link rel="icon" href="favicon.png">
+		<link rel="stylesheet" href="bar.css" type="text/css">
+		<link rel="stylesheet" href="branches.css" type="text/css">
+		<link rel="stylesheet" href="footer.css" type="text/css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
@@ -28,7 +28,7 @@
 				we eat. </li>
 				<div>
 					<figure>
-						<img src="images/atpcycle.png" width="60%"></img>
+						<img src="atpcycle.png" width="60%"></img>
 						<figcaption id="atpcaption">This graph shows how food materials, 
 						specifically proteins, carbohydrates, and fats, 
 						are converted into ATP through a chemical process 
